source/externs/X11/extensions/XI2proto.h


#define Window  uint32_t
#define Time    uint32_t
#define Cursor  uint32_t
#define X_XIQueryPointer                40
#define X_XIWarpPointer                 41
#define X_XIChangeCursor                42
#define X_XIChangeHierarchy             43
#define X_XISetClientPointer            44
#define X_XISelectEvents                46
#define X_XIQueryDevice                 48
#define X_XISetFocus                    49
#define X_XIGetFocus                    50
#define X_XIGrabDevice                  51
#define X_XIUngrabDevice                52
#define X_XIAllowEvents                 53
#define X_XIPassiveGrabDevice           54
#define X_XIPassiveUngrabDevice         55
#define X_XIListProperties              56
#define X_XIGetSelectedEvents           60
typedef int32_t FP1616;
typedef struct {
    uint16_t    deviceid;       
    uint16_t    mask_len;       
} xXIEventMask;
typedef struct
{
    uint32_t    base_mods;              
    uint32_t    latched_mods;           
    uint32_t    locked_mods;            
    uint32_t    effective_mods;         
} xXIModifierInfo;
typedef struct
{
    uint8_t     base_group;             
    uint8_t     latched_group;          
    uint8_t     locked_group;           
    uint8_t     effective_group;        
} xXIGroupInfo;
#define sz_xXIQueryDeviceReq                    8
typedef struct {
    uint8_t     repType;                
    uint8_t     RepType;                
    uint16_t    sequenceNumber;
    uint32_t    length;
    uint16_t    num_devices;
    uint16_t    pad0;
    uint32_t    pad1;
    uint32_t    pad2;
    uint32_t    pad3;
    uint32_t    pad4;
    uint32_t    pad5;
} xXIQueryDeviceReply;
#define sz_xXIQueryDeviceReply                  32
typedef struct {
    uint8_t     reqType;                
    uint8_t     ReqType;                
    uint16_t    length;                 
    Window      win;
    uint16_t    num_masks;
    uint16_t    pad;
} xXISelectEventsReq;
#define sz_xXISelectEventsReq                  12
typedef struct {
    uint8_t     reqType;                
    uint8_t     ReqType;                
    uint16_t    length;                 
    Window      win;
} xXIGetSelectedEventsReq;
#define sz_xXIGetSelectedEventsReq              8
typedef struct {
    uint8_t     repType;                
    uint8_t     RepType;                
    uint16_t    sequenceNumber;
    uint32_t    length;
    uint16_t    num_masks;              
    uint16_t    pad0;
    uint32_t    pad1;
    uint32_t    pad2;
    uint32_t    pad3;
    uint32_t    pad4;
    uint32_t    pad5;
} xXIGetSelectedEventsReply;
#define sz_xXIGetSelectedEventsReply            32
typedef struct {
    uint8_t     reqType;                
    uint8_t     ReqType;                
    uint16_t    length;                 
    Window      win;
    uint16_t    deviceid;
    uint16_t    pad1;
} xXIQueryPointerReq;
#define sz_xXIQueryPointerReq                   12
typedef struct {
    uint8_t     repType;                
    uint8_t     RepType;                
    uint16_t    sequenceNumber;
    uint32_t    length;
    Window      root;
    Window      child;
    FP1616      root_x;
    FP1616      root_y;
    FP1616      win_x;
    FP1616      win_y;
    uint8_t     same_screen;
    uint8_t     pad0;
    uint16_t    buttons_len;
    xXIModifierInfo mods;
    xXIGroupInfo group;
} xXIQueryPointerReply;
#define sz_xXIQueryPointerReply                 56
typedef struct {
    uint8_t     reqType;                
    uint8_t     ReqType;                
    uint16_t    length;                 
    Window      src_win;
    Window      dst_win;
    FP1616      src_x;
    FP1616      src_y;
    uint16_t    src_width;
    uint16_t    src_height;
    FP1616      dst_x;
    FP1616      dst_y;
    uint16_t    deviceid;
    uint16_t    pad1;
} xXIWarpPointerReq;
#define sz_xXIWarpPointerReq                    36
typedef struct {
    uint8_t     reqType;                
    uint8_t     ReqType;                
    uint16_t    length;                 
    Window      win;
    Cursor      cursor;
    uint16_t    deviceid;
    uint16_t    pad1;
} xXIChangeCursorReq;
#define sz_xXIChangeCursorReq                           16
typedef struct {
    uint8_t     reqType;                
    uint8_t     ReqType;                
    uint16_t    length;                 
    uint8_t     num_changes;
    uint8_t     pad0;
    uint16_t    pad1;
} xXIChangeHierarchyReq;
#define sz_xXIChangeHierarchyReq                        8
typedef struct {
    uint16_t    type;
    uint16_t    length;                 
} xXIAnyHierarchyChangeInfo;
typedef struct {
    uint16_t    type;                   
    uint16_t    length;                 
    uint16_t    name_len;
    uint8_t     send_core;
    uint8_t     enable;
} xXIAddMasterInfo;
typedef struct {
    uint16_t    type;            
    uint16_t    length;          
    uint16_t    deviceid;
    uint8_t     return_mode;     
    uint8_t     pad;
    uint16_t    return_pointer;  
    uint16_t    return_keyboard; 
} xXIRemoveMasterInfo;
typedef struct {
    uint16_t    type;           
    uint16_t    length;         
    uint16_t    deviceid;
    uint16_t    new_master;     
} xXIAttachSlaveInfo;
typedef struct {
    uint16_t    type;           
    uint16_t    length;         
    uint16_t    deviceid;
    uint16_t    pad;
} xXIDetachSlaveInfo;
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    Window      win;
    uint16_t    deviceid;
    uint16_t    pad1;
} xXISetClientPointerReq;
#define sz_xXISetClientPointerReq                 12
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    Window      win;
} xXIGetClientPointerReq;
#define sz_xXIGetClientPointerReq                 8
typedef struct {
    uint8_t     repType;                
    uint8_t     RepType;                
    uint16_t    sequenceNumber;
    uint32_t    length;
    BOOL        set;                    
    uint8_t     pad0;
    uint16_t    deviceid;
    uint32_t    pad1;
    uint32_t    pad2;
    uint32_t    pad3;
    uint32_t    pad4;
    uint32_t    pad5;
} xXIGetClientPointerReply;
#define sz_xXIGetClientPointerReply               32
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    Window      focus;
    Time        time;
    uint16_t    deviceid;
    uint16_t    pad0;
} xXISetFocusReq;
#define sz_xXISetFocusReq                       16
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    uint16_t    deviceid;
    uint16_t    pad0;
} xXIGetFocusReq;
#define sz_xXIGetFocusReq                       8
typedef struct {
    uint8_t     repType;                
    uint8_t     RepType;                
    uint16_t    sequenceNumber;
    uint32_t    length;
    Window      focus;
    uint32_t    pad1;
    uint32_t    pad2;
    uint32_t    pad3;
    uint32_t    pad4;
    uint32_t    pad5;
} xXIGetFocusReply;
#define sz_xXIGetFocusReply                     32
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    Window      grab_window;
    Time        time;
    Cursor      cursor;
    uint16_t    deviceid;
    uint8_t     grab_mode;
    uint8_t     paired_device_mode;
    uint8_t     owner_events;
    uint8_t     pad;
    uint16_t    mask_len;
} xXIGrabDeviceReq;
#define sz_xXIGrabDeviceReq                     24
typedef struct {
    uint32_t    modifiers;              
    uint8_t     status;                 
    uint8_t     pad0;
    uint16_t    pad1;
} xXIGrabModifierInfo;
typedef struct {
    uint8_t     repType;                
    uint8_t     RepType;                
    uint16_t    sequenceNumber;
    uint32_t    length;
    uint8_t     status;
    uint8_t     pad0;
    uint16_t    pad1;
    uint32_t    pad2;
    uint32_t    pad3;
    uint32_t    pad4;
    uint32_t    pad5;
    uint32_t    pad6;
} xXIGrabDeviceReply;
#define sz_xXIGrabDeviceReply                  32
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    Time        time;
    uint16_t    deviceid;
    uint16_t    pad;
} xXIUngrabDeviceReq;
#define sz_xXIUngrabDeviceReq                   12
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    Time        time;
    uint16_t    deviceid;
    uint8_t     mode;
    uint8_t     pad;
} xXIAllowEventsReq;
#define sz_xXIAllowEventsReq                   12
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    Time        time;
    uint16_t    deviceid;
    uint8_t     mode;
    uint8_t     pad;
    uint32_t    touchid;                
    Window      grab_window;            
} xXI2_2AllowEventsReq;
#define sz_xXI2_2AllowEventsReq                20
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    Time        time;
    Window      grab_window;
    Cursor      cursor;
    uint32_t    detail;
    uint16_t    deviceid;
    uint16_t    num_modifiers;
    uint16_t    mask_len;
    uint8_t     grab_type;
    uint8_t     grab_mode;
    uint8_t     paired_device_mode;
    uint8_t     owner_events;
    uint16_t    pad1;
} xXIPassiveGrabDeviceReq;
#define sz_xXIPassiveGrabDeviceReq              32
typedef struct {
    uint8_t     repType;                
    uint8_t     RepType;                
    uint16_t    sequenceNumber;
    uint32_t    length;
    uint16_t    num_modifiers;
    uint16_t    pad1;
    uint32_t    pad2;
    uint32_t    pad3;
    uint32_t    pad4;
    uint32_t    pad5;
    uint32_t    pad6;
} xXIPassiveGrabDeviceReply;
#define sz_xXIPassiveGrabDeviceReply            32
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    Window      grab_window;
    uint32_t    detail;
    uint16_t    deviceid;
    uint16_t    num_modifiers;
    uint8_t     grab_type;
    uint8_t     pad0;
    uint16_t    pad1;
} xXIPassiveUngrabDeviceReq;
#define sz_xXIPassiveUngrabDeviceReq            20
typedef struct {
    uint8_t     reqType;
    uint8_t     ReqType;                
    uint16_t    length;                 
    uint16_t    deviceid;
    uint16_t    pad;
} xXIListPropertiesReq;
#define sz_xXIListPropertiesReq                 8
typedef struct {
    uint8_t     repType;                
    uint8_t     RepType;                
    uint16_t    sequenceNumber;
    uint32_t    length;
    uint16_t    num_properties;
    uint16_t    pad0;
    uint32_t    pad1;
    uint32_t    pad2;
    uint32_t    pad3;
    uint32_t    pad4;
    uint32_t    pad5;
} xXIListPropertiesReply;