source/externs/X11/extensions/XI2proto.d

enum sz_xXIQueryDeviceReq =                    8;

struct xXIQueryDeviceReply {
    ubyte repType;                /**< ::X_Reply */
    ubyte RepType;                /**< Always ::X_XIQueryDevice */
    ushort sequenceNumber;
    uint length;
    ushort num_devices;
    ushort pad0;
    uint pad1;
    uint pad2;
    uint pad3;
    uint pad4;
    uint pad5;
}
enum sz_xXIQueryDeviceReply =                  32;

/**
 * Select for events on a given window.
 */
struct xXISelectEventsReq {
    ubyte reqType;                /**< Input extension major code */
    ubyte ReqType;                /**< Always ::X_XISelectEvents */
    ushort length;                 /**< Length in 4 byte units */
    Window win;
    ushort num_masks;
    ushort pad;
}
enum sz_xXISelectEventsReq =                  12;

/**
 * Query for selected events on a given window.
 */
struct xXIGetSelectedEventsReq {
    ubyte reqType;                /**< Input extension major code */
    ubyte ReqType;                /**< Always ::X_XIGetSelectedEvents */
    ushort length;                 /**< Length in 4 byte units */
    Window win;
}
enum sz_xXIGetSelectedEventsReq =              8;

struct xXIGetSelectedEventsReply {
    ubyte repType;                /**< Input extension major opcode */
    ubyte RepType;                /**< Always ::X_XIGetSelectedEvents */
    ushort sequenceNumber;
    uint length;
    ushort num_masks;              /**< Number of xXIEventMask structs
                                             trailing the reply */
    ushort pad0;
    uint pad1;
    uint pad2;
    uint pad3;
    uint pad4;
    uint pad5;
}
enum sz_xXIGetSelectedEventsReply =            32;

/**
 * Query the given device's screen/window coordinates.
 */

struct xXIQueryPointerReq {
    ubyte reqType;                /**< Input extension major code */
    ubyte ReqType;                /**< Always ::X_XIQueryPointer */
    ushort length;                 /**< Length in 4 byte units */
    Window win;
    ushort deviceid;
    ushort pad1;
}
enum sz_xXIQueryPointerReq =                   12;


struct xXIQueryPointerReply {
    ubyte repType;                /**< Input extension major opcode */
    ubyte RepType;                /**< Always ::X_XIQueryPointer */
    ushort sequenceNumber;
    uint length;
    Window root;
    Window child;
    FP1616 root_x;
    FP1616 root_y;
    FP1616 win_x;
    FP1616 win_y;
    ubyte same_screen;
    ubyte pad0;
    ushort buttons_len;
    xXIModifierInfo mods;
    xXIGroupInfo group;
}
enum sz_xXIQueryPointerReply =                 56;

/**
 * Warp the given device's pointer to the specified position.
 */

struct xXIWarpPointerReq {
    ubyte reqType;                /**< Input extension major code */
    ubyte ReqType;                /**< Always ::X_XIWarpPointer   */
    ushort length;                 /**< Length in 4 byte units */
    Window src_win;
    Window dst_win;
    FP1616 src_x;
    FP1616 src_y;
    ushort src_width;
    ushort src_height;
    FP1616 dst_x;
    FP1616 dst_y;
    ushort deviceid;
    ushort pad1;
}
enum sz_xXIWarpPointerReq =                    36;

/**
 * Change the given device's sprite to the given cursor.
 */

struct xXIChangeCursorReq {
    ubyte reqType;                /**< Input extension major code */
    ubyte ReqType;                /**< Always ::X_XIChangeCursor  */
    ushort length;                 /**< Length in 4 byte units */
    Window win;
    Cursor cursor;
    ushort deviceid;
    ushort pad1;
}
enum sz_xXIChangeCursorReq =                           16;

/**
 * Modify the device hierarchy.
 */

struct xXIChangeHierarchyReq {
    ubyte reqType;                /**< Input extension major code */
    ubyte ReqType;                /**< Always ::X_XIChangeHierarchy */
    ushort length;                 /**< Length in 4 byte units */
    ubyte num_changes;
    ubyte pad0;
    ushort pad1;
}
enum sz_xXIChangeHierarchyReq =                        8;

/**
 * Generic header for any hierarchy change.
 */
struct xXIAnyHierarchyChangeInfo {
    ushort type;
    ushort length;                 /**< Length in 4 byte units */
}

/**
 * Create a new master device.
 * Name of new master follows struct (4-byte padded)
 */
struct xXIAddMasterInfo {
    ushort type;                   /**< Always ::XIAddMaster */
    ushort length;                 /**< 2 + (namelen + padding)/4 */
    ushort name_len;
    ubyte send_core;
    ubyte enable;
}

/**
 * Delete a master device. Will automatically delete the master device paired
 * with the given master device.
 */
struct xXIRemoveMasterInfo {
    ushort type;            /**< Always ::XIRemoveMaster */
    ushort length;          /**< 3 */
    ushort deviceid;
    ubyte return_mode;     /**< ::XIAttachToMaster, ::XIFloating */
    ubyte pad;
    ushort return_pointer;  /**< Pointer to attach slave ptr devices to */
    ushort return_keyboard; /**< keyboard to attach slave keybd devices to*/
}

/**
 * Attach an SD to a new device.
 * NewMaster has to be of same type (pointer->pointer, keyboard->keyboard);
 */
struct xXIAttachSlaveInfo {
    ushort type;           /**< Always ::XIAttachSlave */
    ushort length;         /**< 2 */
    ushort deviceid;
    ushort new_master;     /**< id of new master device */
}

/**
 * Detach an SD from its current master device.
 */
struct xXIDetachSlaveInfo {
    ushort type;           /**< Always ::XIDetachSlave */
    ushort length;         /**< 2 */
    ushort deviceid;
    ushort pad;
}


/**
 * Set the window/client's ClientPointer.
 */
struct xXISetClientPointerReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XISetClientPointer */
    ushort length;                 /**< Length in 4 byte units */
    Window win;
    ushort deviceid;
    ushort pad1;
}
enum sz_xXISetClientPointerReq =                 12;

/**
 * Query the given window/client's ClientPointer setting.
 */
struct xXIGetClientPointerReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_GetClientPointer */
    ushort length;                 /**< Length in 4 byte units */
    Window win;
}
enum sz_xXIGetClientPointerReq =                 8;

struct xXIGetClientPointerReply {
    ubyte repType;                /**< Input extension major opcode */
    ubyte RepType;                /**< Always ::X_GetClientPointer */
    ushort sequenceNumber;
    uint length;
    BOOL set;                    /**< client pointer is set? */
    ubyte pad0;
    ushort deviceid;
    uint pad1;
    uint pad2;
    uint pad3;
    uint pad4;
    uint pad5;
}
enum sz_xXIGetClientPointerReply =               32;

/**
 * Set the input focus to the specified window.
 */
struct xXISetFocusReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XISetFocus */
    ushort length;                 /**< Length in 4 byte units */
    Window focus;
    Time time;
    ushort deviceid;
    ushort pad0;
}
enum sz_xXISetFocusReq =                       16;

/**
 * Query the current input focus.
 */
struct xXIGetFocusReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XIGetDeviceFocus */
    ushort length;                 /**< Length in 4 byte units */
    ushort deviceid;
    ushort pad0;
}
enum sz_xXIGetFocusReq =                       8;

struct xXIGetFocusReply {
    ubyte repType;                /**< Input extension major opcode */
    ubyte RepType;                /**< Always ::X_XIGetFocus */
    ushort sequenceNumber;
    uint length;
    Window focus;
    uint pad1;
    uint pad2;
    uint pad3;
    uint pad4;
    uint pad5;
}
enum sz_xXIGetFocusReply =                     32;


/**
 * Grab the given device.
 */
struct xXIGrabDeviceReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XIGrabDevice */
    ushort length;                 /**< Length in 4 byte units */
    Window grab_window;
    Time time;
    Cursor cursor;
    ushort deviceid;
    ubyte grab_mode;
    ubyte paired_device_mode;
    ubyte owner_events;
    ubyte pad;
    ushort mask_len;
}
enum sz_xXIGrabDeviceReq =                     24;

/**
 * Return codes from a XIPassiveGrabDevice request.
 */
struct xXIGrabModifierInfo {
    uint modifiers;              /**< Modifier state */
    ubyte status;                 /**< Grab status code */
    ubyte pad0;
    ushort pad1;
}

struct xXIGrabDeviceReply {
    ubyte repType;                /**< Input extension major opcode */
    ubyte RepType;                /**< Always ::X_XIGrabDevice */
    ushort sequenceNumber;
    uint length;
    ubyte status;
    ubyte pad0;
    ushort pad1;
    uint pad2;
    uint pad3;
    uint pad4;
    uint pad5;
    uint pad6;
}
enum sz_xXIGrabDeviceReply =                  32;

/**
 * Ungrab the specified device.
 *
 */
struct xXIUngrabDeviceReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XIUngrabDevice */
    ushort length;                 /**< Length in 4 byte units */
    Time time;
    ushort deviceid;
    ushort pad;
}
enum sz_xXIUngrabDeviceReq =                   12;


/**
 * Allow or replay events on the specified grabbed device.
 */
struct xXIAllowEventsReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XIAllowEvents */
    ushort length;                 /**< Length in 4 byte units */
    Time time;
    ushort deviceid;
    ubyte mode;
    ubyte pad;
}
enum sz_xXIAllowEventsReq =                   12;

/**
 * Allow or replay events on the specified grabbed device.
 * Since XI 2.2
 */
struct xXI2_2AllowEventsReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XIAllowEvents */
    ushort length;                 /**< Length in 4 byte units */
    Time time;
    ushort deviceid;
    ubyte mode;
    ubyte pad;
    uint touchid;                /**< Since XI 2.2 */
    Window grab_window;            /**< Since XI 2.2 */
}
enum sz_xXI2_2AllowEventsReq =                20;


/**
 * Passively grab the device.
 */
struct xXIPassiveGrabDeviceReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XIPassiveGrabDevice */
    ushort length;                 /**< Length in 4 byte units */
    Time time;
    Window grab_window;
    Cursor cursor;
    uint detail;
    ushort deviceid;
    ushort num_modifiers;
    ushort mask_len;
    ubyte grab_type;
    ubyte grab_mode;
    ubyte paired_device_mode;
    ubyte owner_events;
    ushort pad1;
}
enum sz_xXIPassiveGrabDeviceReq =              32;

struct xXIPassiveGrabDeviceReply {
    ubyte repType;                /**< Input extension major opcode */
    ubyte RepType;                /**< Always ::X_XIPassiveGrabDevice */
    ushort sequenceNumber;
    uint length;
    ushort num_modifiers;
    ushort pad1;
    uint pad2;
    uint pad3;
    uint pad4;
    uint pad5;
    uint pad6;
}
enum sz_xXIPassiveGrabDeviceReply =            32;

/**
 * Delete a passive grab for the given device.
 */
struct xXIPassiveUngrabDeviceReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XIPassiveUngrabDevice */
    ushort length;                 /**< Length in 4 byte units */
    Window grab_window;
    uint detail;
    ushort deviceid;
    ushort num_modifiers;
    ubyte grab_type;
    ubyte pad0;
    ushort pad1;
}
enum sz_xXIPassiveUngrabDeviceReq =            20;

/**
 * List all device properties on the specified device.
 */
struct xXIListPropertiesReq {
    ubyte reqType;
    ubyte ReqType;                /**< Always ::X_XIListProperties */
    ushort length;                 /**< Length in 4 byte units */
    ushort deviceid;
    ushort pad;
}
enum sz_xXIListPropertiesReq =                 8;

struct xXIListPropertiesReply {
    ubyte repType;                /**< Input extension major opcode */
    ubyte RepType;                /**< Always ::X_XIListProperties */
    ushort sequenceNumber;
    uint length;
    ushort num_properties;
    ushort pad0;
    uint pad1;
    uint pad2;
    uint pad3;
    uint pad4;
    uint pad5;
}
